# ai-rag-doc-search

./: .gitignore  README.md
rag-prototype/: docker-compose.yml
rag-prototype/api/: Dockerfile  api.py  pyproject.toml
rag-prototype/frontend/: Dockerfile  index.html
rag-prototype/ollama/: Dockerfile  start.sh
rag-prototype/prompts/: init_prompt_en.tmpl  init_prompt_hu.tmpl  prompt_en.tmpl  prompt_hu.tmpl
