[tool.poetry]
name = "rag-api"
version = "0.1.0"
description = "Offline RAG API with FastAPI, LangChain, Ollama and Weaviate"
authors = ["Tibor Kiss <tibor.kiss@cloudmentor.hu>"]
readme = "README.md"
packages = [{ include = "api" }]

[tool.poetry.dependencies]
python = "^3.11"

# API + szerver
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }

# LLM integráció és prompt augmentáció
langchain = "^0.1.16"
langchain-community = "^0.0.35"
ollama = "^0.1.6"

# Vector store
weaviate-client = "^4.5.4"

# Extra segédcsomagok
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
aiohttp = "^3.9.5"  # async HTTP hívásokhoz, ha szükséges

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
